<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPermissionRequest"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fun_permission"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWidget"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fun_widget"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPermissionRequest"/>

    <TextView
        android:id="@+id/tvCoroutines"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fun_coroutines"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWidget"/>

    <TextView
        android:id="@+id/tvRequestManager"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fun_request_manager"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCoroutines"/>

    <TextView
        android:id="@+id/tvFloating"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fun_floating"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRequestManager"/>

</androidx.constraintlayout.widget.ConstraintLayout>